--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="portfolio_img.jpeg" alt="">
+                    <img src="PortfolioDp.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Arsh and I'm a <span class="typing-2"></span></div>
@@ -179,11 +179,11 @@
 
                 <div class="card">
                     <div class="box">
-                        <a href="https://arsh069.github.io/Band-Page/" target="blank"><img src="band.jpg" alt=""></a>
-                        <div class="text">Band Page</div>
+                        <a href="https://arsh069.github.io/Weather-App/" target="blank"><img src="weather-app.png" alt=""></a>
+                        <div class="text">Weather App</div>
                         <p>
-                            A dynamic band store webpage with feature of add to cart
-                            and purchase functionalities to enable users to browse and buy band merchandise
+                            A weather application that displays current weather information for a given location, including temperature,
+                            weather conditions, wind details, air quality, and pressure
                         </p>
                     </div>
                 </div>
@@ -274,7 +274,7 @@ touch to text displays
         <span>
             <div class="social">
                 <a href="https://github.com/Arsh069" target="blank"><i class="fab fa-github" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/in/kohina-pandey15/" target="blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/arsh069/" target="blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                 <a href="https://www.instagram.com/bolt_2.0_/" target="blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
             </div>
         </span>
